@@ -48,6 +48,10 @@ if which[0] not in ["numeric", "numarray", "numpy"]:
     raise ValueError("numerix selector must be either 'Numeric', 'numarray', or 'numpy' but the value obtained from the %s was '%s'." % (which[1], which[0]))
 
 if which[0] == "numarray":
+    import warnings
+    warnings.warn("numarray use as a numerix backed for matplotlib is deprecated",
+                  DeprecationWarning, stacklevel=1)
+    
     #from na_imports import *
     from numarray import *
     from _na_imports import nx, inf, infinity, Infinity, Matrix, isnan, all
@@ -56,8 +60,12 @@ if which[0] == "numarray":
     import numarray
     version = 'numarray %s'%numarray.__version__
     nan = struct.unpack('d', struct.pack('Q', 0x7ff8000000000000))[0]
-
+        
 elif which[0] == "numeric":
+    import warnings
+    warnings.warn("Numeric use as a numerix backed for matplotlib is deprecated",
+                  DeprecationWarning, stacklevel=1)
+    
     #from nc_imports import *
     from Numeric import *
     from _nc_imports import nx, inf, infinity, Infinity, isnan, all, any
@@ -65,6 +73,7 @@ elif which[0] == "numeric":
     import Numeric
     version = 'Numeric %s'%Numeric.__version__
     nan = struct.unpack('d', struct.pack('Q', 0x7ff8000000000000))[0]
+    
 elif which[0] == "numpy":
     try:        
         import numpy.oldnumeric as numpy
